backend/verify_error.log
E:\Attendance Portal\attendance-portal\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Γ¿» Unable to compile TypeScript:
src/modules/auth/auth.routes.ts(103,41): error TS2339: Property 'id' does not exist on type 'string | object | Buffer<ArrayBufferLike>'.
  Property 'id' does not exist on type 'string'.

    at createTSError (E:\Attendance Portal\attendance-portal\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (E:\Attendance Portal\attendance-portal\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (E:\Attendance Portal\attendance-portal\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (E:\Attendance Portal\attendance-portal\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (E:\Attendance Portal\attendance-portal\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (E:\Attendance Portal\attendance-portal\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2339 ]
}
